# CloakMCP

./: .gitignore  LICENSE  README.md  TEST_REPORT.md  pyproject.toml  server.json  setup.sh
cloakbrowsermcp/: __init__.py  __main__.py  markdown.py  network.py  server.py  session.py  snapshot.py  stealth.py  tools.py  tools_advanced.py  vision.py  waiting.py
tests/: conftest.py  test_edge_cases.py  test_server.py  test_session.py  test_tools.py  test_tools_advanced.py
