[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloakbrowsermcp"
version = "2.0.4"
description = "Stealth browser MCP server — anti-detection Chromium + snapshot-first AI agent interface"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "overtimepog" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "cloakbrowser",
    "stealth",
    "browser",
    "chromium",
    "automation",
    "ai-agent",
    "web-scraping",
    "anti-detect",
    "playwright",
    "recaptcha",
    "cloudflare",
    "turnstile",
    "accessibility-tree",
    "snapshot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.20,<2.0",
    "cloakbrowser>=0.3",
    "playwright>=1.40",
]

[project.optional-dependencies]
geoip = ["cloakbrowser[geoip]"]
patchright = ["cloakbrowser[patchright]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff",
]

[project.scripts]
cloakbrowsermcp = "cloakbrowsermcp.server:main"

[project.urls]
Homepage = "https://github.com/overtimepog/CloakMCP"
Documentation = "https://github.com/overtimepog/CloakMCP#readme"
Repository = "https://github.com/overtimepog/CloakMCP"
Issues = "https://github.com/overtimepog/CloakMCP/issues"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
